--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 
-<body>
+<body background="D:\project\car\templates\william-thomas-ny6tO4ItOEY-unsplash.jpg">
 
-    <div style="color:blue">
+    <div>
         <form action="{{ url_for('predict')}}" method="post">
             <h2>Predictive analysis</h2>
             <h3>Year</h3>
